--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.9",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -36,6 +37,7 @@
     "graphql": "^16.6.0",
     "mysql": "^2.18.1",
     "node": "^16.13.0",
+    "nodemailer-sendmail-transport": "^1.0.2",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -58,6 +60,7 @@
     "graphql-schema": "^0.5.1",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "sib-api-v3-sdk": "^8.5.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
