--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=5000
 DB_NAME=yourcar
 DB_USER=root
 DB_PASS=pass
+PASS="NI0DO9E5chAVPbT1"
+USER="josewawe75@gmail.com"
+USER_TO="mjdiners@gmail.com
