--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ PORT=5000
 DB_NAME=yourcar
 DB_USER=root
 DB_PASS=pass
+DB_HOST=localhost
 PASS="NI0DO9E5chAVPbT1"
 USER="josewawe75@gmail.com"
 USER_TO="mjdiners@gmail.com
