--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,5 +1,6 @@
-{
-    "name": "dev",
+[
+  {
+    "name": "default",
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
@@ -12,7 +13,22 @@
     "cli": {
       "migrationsDir": "src/migrations"
     },
-"extensions": {
-  "uuid-ossp": true
-}
+    "extensions": {
+      "uuid-ossp": true
+    }
+  },
+  {
+    "name": "prod",
+    "type": "postgres",
+    "url": "postgres://postgres:12345678@localhost:5432/yourcar",
+    "ssl": true,
+    "entities": ["dist/**/entities/*{.ts,.js}"],
+    "migrations": ["dist/migrations/*{.ts,.js}"],
+    "cli": {
+      "migrationsDir": "src/migrations"
+    },
+    "extensions": {
+      "uuid-ossp": true
+    }
   }
+]
