--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 PORT=5000
 DB_NAME=yourcar
-DB_USER=root
-DB_PASS=pass
+DB_USER=postgres
+DB_PASS=12345678
 DB_HOST=localhost
+DB_PORT=5432
 PASS="NI0DO9E5chAVPbT1"
 USER="josewawe75@gmail.com"
 USER_TO="mjdiners@gmail.com
