--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DB_HOST=localhost
 DB_PORT=5432
 PASS="NI0DO9E5chAVPbT1"
 USER="josewawe75@gmail.com"
-USER_TO="mjdiners@gmail.com
+DATABASE_URL=postgres://postgres:12345678@192.168.1.100:5433/yourcar
