--- a/ormconfig.json
+++ b/ormconfig.json
@@ -25,7 +25,7 @@
     "username": "postgres",
     "password": "12345678",
     "database": "yourcar",
-    "ssl": false,
+    "ssl": true,
     "entities": ["dist/**/entities/*{.ts,.js}"],
     "migrations": ["dist/migrations/*{.ts,.js}"],
     "cli": {
