--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12",
+    "typeorm": "^0.3.15",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -68,7 +68,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "typeorm": "^0.3.15"
   },
   "jest": {
     "moduleFileExtensions": [
