--- a/package.json
+++ b/package.json
@@ -62,14 +62,14 @@
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "sib-api-v3-sdk": "^8.5.0",
-    "source-map-support": "^0.5.20",
+    "source-map-support": "^0.5.21",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.15",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
