--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ DB_HOST=localhost
 DB_PORT=5432
 PASS="NI0DO9E5chAVPbT1"
 USER="josewawe75@gmail.com"
+PGDATABASE=railway
+PGHOST=containers-us-west-111.railway.app
+PGPASSWORD=Ab8n8fqA3IAfkcc2avbe
+PGPORT=7788
+PGUSER=postgres
+
+
