--- a/ormconfig.json
+++ b/ormconfig.json
@@ -20,12 +20,12 @@
   {
     "name": "prod",
     "type": "postgres",
-    "host": "localhost",
-    "port": 5432,
+    "host": "containers-us-west-111.railway.app",
+    "port": 7788,
     "username": "postgres",
-    "password": "123456789",
-    "database": "yourcar",
-    "ssl": true,
+    "password": "Ab8n8fqA3IAfkcc2avbe",
+    "database": "railway",
+    "ssl": false,
     "entities": ["dist/**/entities/*{.ts,.js}"],
     "synchronize": false,
     "migrations": ["dist/migrations/*{.ts,.js}"],
