--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typeorm": "^0.3.15",
+    "typeorm-cli": "^1.0.7",
     "typescript": "^4.7.4"
   },
   "jest": {
