--- a/ormconfig.json
+++ b/ormconfig.json
@@ -27,8 +27,9 @@
     "database": "railway",
     "ssl": true,
     "entities": ["dist/**/entities/*{.ts,.js}"],
-    "synchronize": false,
-    "migrations": ["dist/migrations/*.js"],
+    "synchronize": true,
+    "migrationRun": true,
+    "migrations": ["dist/migrations/*{.ts,.js}"],
     "cli": {
       "migrationsDir": "src/migrations"
     },
@@ -37,3 +38,4 @@
     }
   }
 ]
+
